[metadata]
name = aioconveyor
version = 0.0.2

description= asyncio long running producer consumer
keywords = asyncio
author = paul sorenson
author_email = news02@metrak.com
# test_suite = tests

[options]
python_requires = >=3.8
install_requires =
    setuptools
    wheel
package_dir =
    =src
packages = find:
py_modules = aioconveyor

[options.packages.find]
where = src
