[metadata]
name = aioconveyor
version = 0.1.0

description= asyncio long running producer consumer
keywords = asyncio
author = paul sorenson
author_email = news02@metrak.com

[options]
python_requires = >=3.8
install_requires =
    setuptools
    wheel
package_dir =
    =src
packages = find:
py_modules = aioconveyor
test_suite = tests

[options.packages.find]
where = src
